# common_pairs_sam_api

./: .coveragerc  Makefile  README.md  pyproject.toml  pytest.ini  template.yaml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/nordhealth/: __init__.py
app/api/v1/nordhealth/endpoints/: __init__.py
app/api/v1/nordhealth/endpoints/common_numbers_pairs/: __init__.py  endpoint.py  schema.py  utils.py
app/api/v1/nordhealth/endpoints/project_info/: __init__.py  endpoint.py
app/modules/nordhealth/: processors.py  utils.py
tests/: conftest.py
tests/api/v1/nordhealth/endpoints/: test_common_number_pairs.py  test_project_info.py
tests/modules/nordhealth/: test_processors.py
